changed urls to https

--- a/public_html/templates/backoffice/_default/products/products_edit/products_edit.html
+++ b/public_html/templates/backoffice/_default/products/products_edit/products_edit.html
@@ -9,7 +9,7 @@
 <script type="text/javascript" src="/js/jq/pixlr.js"></script>
 <script type="text/javascript">
 	$(document).ready(function(){
-		// pixlr.settings.target = 'http://backoffice.%[hostname]%/products/pixlr.php';
+		// pixlr.settings.target = 'https://backoffice.%[hostname]%/products/pixlr.php';
 		// pixlr.settings.exit = 'http://developer.pixlr.com/exit_modal.html';
 		pixlr.settings.credentials = true;
 		pixlr.settings.method = 'get';
